Run recipe UpgradeToJava21